# vantage_v5

./: .dockerignore  .env.example  .env.online.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  milestone_1.md  milestone_2.md  milestone_3.md  nexus_integration.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
artifacts/: launch-strategy-comparative-analysis.md  v5-milestone-1-demo-snapshot.md
concepts/: chat-first-ux.md  email-drafting-protocol.md  hangman-word-game.md  persistent-memory.md  please-remember-this-durable-note-about-thanksgiving-planning.md  shared-workspace.md  significance-of-turkey-to-thanksgiving.md  thanksgiving-holiday.md
deploy/: Caddyfile.example  cloudflared-config.example.yml
docker/: entrypoint.sh
docs/: README.md  architecture-overview.md  compatibility-ledger.md  control-panel-navigation.md  conversation-continuity-resume-todo.md  deployment.md  frontend-legacy-retirement-audit.md  glossary.md  implementation-roadmap.md  implementation-vs-canon.md  navigator-continuity-contract.md  protocols.md  reasoning-path.md  refactor-deep-modules-plan.md  repository-entropy-audit.md  semantic-frame.md  semantic-rules.md  stability-hardening-audit.md  stale-artifact-inventory.md  stale-code-inventory.md  subagent-orchestration-protocol.md  system-improvements-assessment.md  system-improvements-checklist.md  test-taxonomy.md  vantage-capability-interface-map.md  vantage-codebase-functionality-map.md  whiteboard-draft-retention-todo.md  working-memory-and-trace-model.md
(+300 files in other folders)
